install_data('$metadata/index.xml', install_dir: 'share/www/redfish/v1/$metadata')
install_data('schema/AccountService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/AccountService/AccountService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AccountService')
install_data('schema/ActionInfo_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ActionInfo/ActionInfo.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ActionInfo')
install_data('schema/AggregationService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/AggregationService/AggregationService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AggregationService')
install_data('schema/AggregationSource_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/AggregationSource/AggregationSource.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AggregationSource')
install_data('schema/AggregationSourceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/AggregationSourceCollection/AggregationSourceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AggregationSourceCollection')
install_data('schema/Assembly_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Assembly/Assembly.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Assembly')
install_data('schema/AttributeRegistry_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/AttributeRegistry/AttributeRegistry.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AttributeRegistry')
install_data('schema/Bios_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Bios/Bios.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Bios')
install_data('schema/Cable_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Cable/Cable.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Cable')
install_data('schema/CableCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/CableCollection/CableCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CableCollection')
install_data('schema/Certificate_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Certificate/Certificate.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Certificate')
install_data('schema/CertificateCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/CertificateCollection/CertificateCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateCollection')
install_data('schema/CertificateLocations_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/CertificateLocations/CertificateLocations.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateLocations')
install_data('schema/CertificateService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/CertificateService/CertificateService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateService')
install_data('schema/Chassis_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Chassis/Chassis.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Chassis')
install_data('schema/ChassisCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ChassisCollection/ChassisCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ChassisCollection')
install_data('schema/ComponentIntegrity_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ComponentIntegrity/ComponentIntegrity.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComponentIntegrity')
install_data('schema/ComponentIntegrityCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ComponentIntegrityCollection/ComponentIntegrityCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComponentIntegrityCollection')
install_data('schema/ComputerSystem_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ComputerSystem/ComputerSystem.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComputerSystem')
install_data('schema/ComputerSystemCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ComputerSystemCollection/ComputerSystemCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComputerSystemCollection')
install_data('schema/Drive_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Drive/Drive.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Drive')
install_data('schema/DriveCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/DriveCollection/DriveCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/DriveCollection')
install_data('schema/EnvironmentMetrics_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EnvironmentMetrics/EnvironmentMetrics.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EnvironmentMetrics')
install_data('schema/EthernetInterface_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EthernetInterface/EthernetInterface.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EthernetInterface')
install_data('schema/EthernetInterfaceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EthernetInterfaceCollection/EthernetInterfaceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EthernetInterfaceCollection')
install_data('schema/Event_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Event/Event.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Event')
install_data('schema/EventDestination_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EventDestination/EventDestination.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventDestination')
install_data('schema/EventDestinationCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EventDestinationCollection/EventDestinationCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventDestinationCollection')
install_data('schema/EventService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/EventService/EventService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventService')
install_data('schema/FabricAdapter_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/FabricAdapter/FabricAdapter.json', install_dir: 'share/www/redfish/v1/JsonSchemas/FabricAdapter')
install_data('schema/FabricAdapterCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/FabricAdapterCollection/FabricAdapterCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/FabricAdapterCollection')
install_data('schema/Fan_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Fan/Fan.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Fan')
install_data('schema/FanCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/FanCollection/FanCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/FanCollection')
install_data('schema/IPAddresses_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/IPAddresses/IPAddresses.json', install_dir: 'share/www/redfish/v1/JsonSchemas/IPAddresses')
install_data('schema/JsonSchemaFile_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/JsonSchemaFile/JsonSchemaFile.json', install_dir: 'share/www/redfish/v1/JsonSchemas/JsonSchemaFile')
install_data('schema/JsonSchemaFileCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/JsonSchemaFileCollection/JsonSchemaFileCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/JsonSchemaFileCollection')
install_data('schema/LogEntry_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/LogEntry/LogEntry.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogEntry')
install_data('schema/LogEntryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/LogEntryCollection/LogEntryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogEntryCollection')
install_data('schema/LogService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/LogService/LogService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogService')
install_data('schema/LogServiceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/LogServiceCollection/LogServiceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogServiceCollection')
install_data('schema/Manager_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Manager/Manager.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Manager')
install_data('schema/ManagerAccount_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ManagerAccount/ManagerAccount.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerAccount')
install_data('schema/ManagerAccountCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ManagerAccountCollection/ManagerAccountCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerAccountCollection')
install_data('schema/ManagerCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ManagerCollection/ManagerCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerCollection')
install_data('schema/ManagerDiagnosticData_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ManagerDiagnosticData/ManagerDiagnosticData.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerDiagnosticData')
install_data('schema/ManagerNetworkProtocol_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ManagerNetworkProtocol/ManagerNetworkProtocol.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerNetworkProtocol')
install_data('schema/Memory_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Memory/Memory.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Memory')
install_data('schema/MemoryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MemoryCollection/MemoryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MemoryCollection')
install_data('schema/Message_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Message/Message.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Message')
install_data('schema/MessageRegistry_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MessageRegistry/MessageRegistry.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistry')
install_data('schema/MessageRegistryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MessageRegistryCollection/MessageRegistryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryCollection')
install_data('schema/MessageRegistryFile_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MessageRegistryFile/MessageRegistryFile.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryFile')
install_data('schema/MessageRegistryFileCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MessageRegistryFileCollection/MessageRegistryFileCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryFileCollection')
install_data('schema/MetricDefinition_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricDefinition/MetricDefinition.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricDefinition')
install_data('schema/MetricDefinitionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricDefinitionCollection/MetricDefinitionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricDefinitionCollection')
install_data('schema/MetricReport_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricReport/MetricReport.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReport')
install_data('schema/MetricReportCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricReportCollection/MetricReportCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportCollection')
install_data('schema/MetricReportDefinition_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricReportDefinition/MetricReportDefinition.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportDefinition')
install_data('schema/MetricReportDefinitionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/MetricReportDefinitionCollection/MetricReportDefinitionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportDefinitionCollection')
install_data('schema/OperatingConfig_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OperatingConfig/OperatingConfig.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OperatingConfig')
install_data('schema/OperatingConfigCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OperatingConfigCollection/OperatingConfigCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OperatingConfigCollection')
install_data('schema/PCIeDevice_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PCIeDevice/PCIeDevice.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeDevice')
install_data('schema/PCIeDeviceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PCIeDeviceCollection/PCIeDeviceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeDeviceCollection')
install_data('schema/PCIeFunction_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PCIeFunction/PCIeFunction.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeFunction')
install_data('schema/PCIeFunctionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PCIeFunctionCollection/PCIeFunctionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeFunctionCollection')
install_data('schema/PCIeSlots_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PCIeSlots/PCIeSlots.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeSlots')
install_data('schema/PhysicalContext_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PhysicalContext/PhysicalContext.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PhysicalContext')
install_data('schema/Port_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Port/Port.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Port')
install_data('schema/PortCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PortCollection/PortCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PortCollection')
install_data('schema/Power_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Power/Power.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Power')
install_data('schema/PowerSubsystem_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PowerSubsystem/PowerSubsystem.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSubsystem')
install_data('schema/PowerSupply_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PowerSupply/PowerSupply.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSupply')
install_data('schema/PowerSupplyCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/PowerSupplyCollection/PowerSupplyCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSupplyCollection')
install_data('schema/Privileges_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Privileges/Privileges.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Privileges')
install_data('schema/Processor_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Processor/Processor.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Processor')
install_data('schema/ProcessorCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ProcessorCollection/ProcessorCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ProcessorCollection')
install_data('schema/Protocol_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Protocol/Protocol.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Protocol')
install_data('schema/Redundancy_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Redundancy/Redundancy.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Redundancy')
install_data('schema/Resource_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Resource/Resource.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Resource')
install_data('schema/Role_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Role/Role.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Role')
install_data('schema/RoleCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/RoleCollection/RoleCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/RoleCollection')
install_data('schema/Sensor_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Sensor/Sensor.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Sensor')
install_data('schema/SensorCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/SensorCollection/SensorCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SensorCollection')
install_data('schema/ServiceRoot_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ServiceRoot/ServiceRoot.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ServiceRoot')
install_data('schema/Session_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Session/Session.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Session')
install_data('schema/SessionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/SessionCollection/SessionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SessionCollection')
install_data('schema/SessionService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/SessionService/SessionService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SessionService')
install_data('schema/Settings_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Settings/Settings.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Settings')
install_data('schema/SoftwareInventory_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/SoftwareInventory/SoftwareInventory.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SoftwareInventory')
install_data('schema/SoftwareInventoryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/SoftwareInventoryCollection/SoftwareInventoryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SoftwareInventoryCollection')
install_data('schema/Storage_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Storage/Storage.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Storage')
install_data('schema/StorageCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/StorageCollection/StorageCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageCollection')
install_data('schema/StorageController_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/StorageController/StorageController.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageController')
install_data('schema/StorageControllerCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/StorageControllerCollection/StorageControllerCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageControllerCollection')
install_data('schema/Task_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Task/Task.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Task')
install_data('schema/TaskCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/TaskCollection/TaskCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TaskCollection')
install_data('schema/TaskService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/TaskService/TaskService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TaskService')
install_data('schema/TelemetryService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/TelemetryService/TelemetryService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TelemetryService')
install_data('schema/Thermal_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Thermal/Thermal.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Thermal')
install_data('schema/ThermalMetrics_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ThermalMetrics/ThermalMetrics.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ThermalMetrics')
install_data('schema/ThermalSubsystem_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/ThermalSubsystem/ThermalSubsystem.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ThermalSubsystem')
install_data('schema/Triggers_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/Triggers/Triggers.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Triggers')
install_data('schema/TriggersCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/TriggersCollection/TriggersCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TriggersCollection')
install_data('schema/UpdateService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/UpdateService/UpdateService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/UpdateService')
install_data('schema/VirtualMedia_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/VirtualMedia/VirtualMedia.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VirtualMedia')
install_data('schema/VirtualMediaCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/VirtualMediaCollection/VirtualMediaCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VirtualMediaCollection')
install_data('schema/OemManager_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OemManager/OemManager.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemManager')
install_data('schema/OemComputerSystem_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OemComputerSystem/OemComputerSystem.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemComputerSystem')
install_data('schema/OemVirtualMedia_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OemVirtualMedia/OemVirtualMedia.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemVirtualMedia')
install_data('schema/OpenBMCAccountService_v1.xml', install_dir: 'share/www/redfish/v1/schema/')
install_data('JsonSchemas/OemAccountService/OemAccountService.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemAccountService')
